--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^30.0.6",
+    "ag-grid-community": "^30.0.6",
+    "ag-grid-enterprise": "^30.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
