--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
               "node_modules/ngx-toastr/toastr.css"
              
             ],
-            "scripts": []
+            "scripts": [
+             "node_modules/jspdf/dist/jspdf.min.js",
+             "node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"
+            ]
           },
           "configurations": {
             "production": {
