--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "ag-grid-angular": "^30.0.6",
     "ag-grid-community": "^30.0.6",
     "ag-grid-enterprise": "^30.0.6",
+    "faker": "^6.6.6",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.31",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
